--- a/src/styles/text.scss
+++ b/src/styles/text.scss
@@ -1,4 +1,8 @@
 @font-face {
   font-family: "ZhenyanGB-Regular";
-  src: url('./YouSheBiaoTiHei-2.ttf');
+  src: url('./fontFamily/YouSheBiaoTiHei-2.ttf');
+}
+@font-face {
+  font-family: "chuanqi";
+  src: url('./fontFamily/chuanqi.ttf');
 }
