--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,6 +5,12 @@ $leo-theme-color: #3983bf;
 $leo-color-red: #ec3e50;
 $leo-color-orange: #ffbb0e;
 
+.titleHead {
+  color: rgba(64, 158, 255);
+  font-size: 32px;
+  font-weight: 700;
+}
+
 
 :export {
   leoThemeColor: $leo-theme-color;
